--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (https://username.github.io) then use these settings:
-url: "https://username.github.io"
+url: "https://ukda.github.io"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
@@ -14,20 +14,20 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: My website
+title: UK Debt Advisors Link Hub
 
 # Short description of your site
-description: A virtual proof that name is awesome!
+description: Hub of helpful links for staff.
 
 # --- Navigation bar options --- #
 
 # List of links in the navigation bar
 navbar-links:
   About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
-    - Learn markdown: "http://www.markdowntutorial.com/"
-    - GitHub Pages: "https://pages.github.com/"
+  Calculators:
+    - Loan to Value: "http://deanattali.com/beautiful-jekyll/"
+    - 25% Creditor: "http://www.markdowntutorial.com/"
+    - 40% Creditor: "https://pages.github.com/"
   Author's home: "http://deanattali.com"
 
 # Image to show in the navigation bar - image must be a square (width = height)
