--- a/_config.yml
+++ b/_config.yml
@@ -44,8 +44,8 @@ avatar: "/img/FullColor_1024x1024_72dpi-1.jpg"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#F5F5F5"
-navbar-text-col: "#404040"
+navbar-col: "#0E4BAF"
+navbar-text-col: "#FFFFFF"
 navbar-children-col: "#F5F5F5"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
