--- a/_config.yml
+++ b/_config.yml
@@ -44,8 +44,8 @@ avatar: "/img/logoukda.jpg"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#0E4BAF"
-navbar-text-col: "#FFFFFF"
+navbar-col: "#AAEFFE"
+navbar-text-col: "#323738"
 navbar-children-col: "#F5F5F5"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
