--- a/_config.yml
+++ b/_config.yml
@@ -34,8 +34,8 @@ navbar-links:
     
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-#avatar: "/img/logoukda.jpg"
-title-img: "/img/logoukda.jpg"
+avatar: "/img/logoukda.jpg"
+#title-img: "/img/logoukda.jpg"
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
 
